# pybind_prac1

./: .gitignore  CMakeLists.txt  main.cpp  main2.cpp
python/: checker.py  py_checker.py
